--- a/style.css
+++ b/style.css
@@ -3,52 +3,143 @@
 	src: url(./wireframe/background-with-pastel-colored-rainbow-low-poly-design/B612/B612-Regular.ttf) format("truetype");
 }
 
+@font-face{
+	font-family: "big-shoulder";
+	src: url(./wireframe/background-with-pastel-colored-rainbow-low-poly-design/BigShoulder/BigShouldersStencilText-Regular.ttf) format("truetype");
+}
+
 *{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
 
 .main{
 	height: 100vh;
-	background-image: url("./wireframe/background-with-pastel-colored-rainbow-low-poly-design/background-3.jpg");
+	/* background-image: url("./wireframe/background-with-pastel-colored-rainbow-low-poly-design/background-3.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: cover;
+	background-size: cover; */
 	width: 100%;
 }
 .header{
 	height: 50px;
 	border-bottom: 2px solid white ;
+	background: #2e5c5c;
+	color: white;
+	text-align: center;
+	padding-top: 6px;
 }
+
+.header p{
+	font-size: 24px;
+	font-family: big-shoulder !important;
+	letter-spacing: 3px; 
+	margin: 0 !important;
+}
+
+footer{
+	text-align: center;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	color: white;
+	padding: 10px 0px 10px 0px;
+	border-top: 1px solid #d0cbcb;
+	background: #114749;
+}
+
+footer p{
+	margin: 0;
+	font-family: big-shoulder; 
+	letter-spacing: 3px;
+}
+
 .container{
-	height: 100%;
+	max-height: 100%;
 	padding: 20px 20%;
+	background: #efebeb;
+	max-height: 600px;
+	margin-top: 20px;
+	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0,0,0,.12);
+	border-color: #e0e0e0;
+	border-width: 1px;
+    border-style: solid;
 }
 .to-do-list{
-	max-height: 500px;
+	max-height: 540px;
+	margin-bottom: 20px;
+	overflow-y: scroll;
+	background: #efebeb;
 }
 .task-card{
 	/* border-radius: 5px; */
 	padding: 8px 12px;
-	color: #a5a0a0;
+	color: #585757;
+	position: relative;
 	border-radius: 4px;
-    background-color: #fff;
-    background-color: var(--mdc-theme-surface, #fff);
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0,0,0,.12);
-	/* background: #ffffff;
-	box-shadow:
-  0 0.5px 1.2px rgba(0, 0, 0, 0.011),
-  0 1.1px 2.6px rgba(0, 0, 0, 0.016),
-  0 1.8px 4.4px rgba(0, 0, 0, 0.019),
-  0 2.7px 6.6px rgba(0, 0, 0, 0.022),
-  0 3.9px 9.5px rgba(0, 0, 0, 0.025),
-  0 5.5px 13.5px rgba(0, 0, 0, 0.028),
-  0 7.8px 19.1px rgba(0, 0, 0, 0.031),
-  0 11.3px 27.7px rgba(0, 0, 0, 0.034),
-  0 17.4px 42.8px rgba(0, 0, 0, 0.039),
-  0 31px 76px rgba(0, 0, 0, 0.05); */
-  margin-top: 10px;
-  font-family: "b612";
+	background-color: #fff;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+	margin-top: 10px;
+	font-family: "b612";
+}
+
+.task-text{
+	display: inline-block;
+	width: 85%;
+	text-align: justify;
+	overflow-wrap: break-word;
+	padding-right: 15px;
+	margin-bottom: 0 !important;
+}
+
+.task-operations{
+	float: right;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+	width: 15%;
+}
+
+.task-operations a{
+	text-decoration: none;
+	font-size: 1rem;
+	flex: 1;
+	text-align: center;	
+}
+
+.task-complete-btn{
+	color: #4BB543;
+	font-size: 24px;
+}
+
+.task-edit-btn{
+	color: #007bff;
+	font-size: 24px;
+}
+
+.task-delete-btn{
+	color: red;
+	font-size: 24px;
+}
+
+.add-task{
+	border-radius: 50% !important;
+	position: absolute;
+	left: 50%;
+	height: 50px;
+	width: 50px;
+	font-size: 1.5rem !important;
+	transform: translateX(-50%);
+	background: #2e5c5c !important;
+	border-color: #2e5c5c !important;
 }
