--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ footer p{
 	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0,0,0,.12);
 	border-color: #e0e0e0;
 	border-width: 1px;
-    border-style: solid;
+	border-style: solid;
+	position: relative;
 }
 .to-do-list{
 	max-height: 540px;
