--- a/style.css
+++ b/style.css
@@ -144,3 +144,10 @@ footer p{
 	background: #2e5c5c !important;
 	border-color: #2e5c5c !important;
 }
+::-webkit-scrollbar {
+	width: 0px;
+	background: transparent;
+}
+::-webkit-scrollbar-thumb {
+	background: #FF0000;
+	}
