--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,6 +10,9 @@
 
 	<style>
 		* {
+			padding: 0;
+			margin: 0;
+			box-sizing: border-box;
 			background-color: rgb(25, 25, 25);
 			color: rgb(240, 240, 240);
 			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
