Added models.py and security.py for encryption and decryption

--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block title %}Sign In{% endblock %}
-{% block body %} <!--<form action="#" class="signin">-->
-	<label for="Username">Username
-		<input type="text" id="uname">
-	</label>
-	<br>
-	<label for="password">Password
-		<input type="text" id="pwd">
-	</label>
-	<br>
-	<input type="submit" value="Submit" onclick="window.location.replace('/home');">
-	<br>
-	<br>
-	New User? <input type="button" value="Register" onclick="window.location.href = './signup';">
-<!--</form>--> {% endblock %}
+{% block body %} 
+<form action="/auth/" method="POST" class="signin">
+	<div>
+		<label>Username</label>
+		<input type="text" name="username" placeholder="username">
+	</div>
+	<div>
+		<label>Password</label>
+		<input type="password" name="password" placeholder="password">
+	</div>
+	<input type="submit" value="Login" name="login">
+</form> 
+New User? <input type="button" value="Register" onclick="window.location.href = './signup';">
+{% endblock %}
