--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block head %}
-	<script defer src="/static/index.js"></script>
-	<link rel="stylesheet" href="/static/style.css">
+	<script defer src="/static/JS/index.js"></script>
+	<link rel="stylesheet" href="/static/CSS/style.css">
 {% endblock %}
 {% block body %}
 	<div id="to-do-list"></div>
