--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 {% block title %}Sign In{% endblock %}
 {% block body %} 
-<form action="/auth/" method="POST" class="signin">
-	<div>
-		<label>Username</label>
-		<input type="text" name="username" placeholder="username">
-	</div>
-	<div>
-		<label>Password</label>
-		<input type="password" name="password" placeholder="password">
-	</div>
-	<input type="submit" value="Login" name="login">
-</form> 
-New User? <input type="button" value="Register" onclick="window.location.href = './signup';">
+<form action="#" method="POST" class="signin">
+	<fieldset style="width: 30%;">
+		<label for="uname">Username:</label>
+		<br>
+		<input type="text" id="uname" name="username" placeholder="Username">
+		<br>
+		<label for="pwd">Password:</label>
+		<br>
+		<input type="password" id="pwd" name="password" placeholder="Password">
+		<br>
+		<input type="submit" value="Login">
+	</fieldset>
+</form>
+<br>
+New User? <button onclick="window.location.href='./signup';">Register</button>
 {% endblock %}
