--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block title %}Sign In{% endblock %}
 {% block body %} 
-<form action="#" method="POST" class="signin">
+<form action="#" method="POST" id="signin">
 	<fieldset style="width: 30%;">
 		<label for="uname">Username:</label>
 		<br>
-		<input type="text" id="uname" name="username" placeholder="Username">
+		<input type="text" id="uname" name="username" placeholder="Username" required>
 		<br>
 		<label for="pwd">Password:</label>
 		<br>
-		<input type="password" id="pwd" name="password" placeholder="Password">
+		<input type="password" id="pwd" name="password" placeholder="Password" required minlength="8">
 		<br>
 		<input type="submit" value="Login">
 	</fieldset>
