--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,4 +6,5 @@
 {% endblock %}
 {% block body %}
 	<div id="to-do-list"></div>
+	<button id="add-task" onclick="addTask()">+</button>
 {% endblock %}
