--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block head %}
-	<script defer src="/static/JS/index.js"></script>
+	<script defer src="/static/JS/home.js"></script>
 	<link rel="stylesheet" href="/static/CSS/style.css">
 {% endblock %}
 {% block body %}
