signin -> login and  script to redirect

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block head %}
+	<script>
+		if (!localStorage.getItem('username')) { window.location.replace('/auth/') }
+	</script>
 	<script defer src="/static/JS/home.js"></script>
 	<link rel="stylesheet" href="/static/CSS/style.css">
 {% endblock %}
