--- a/website/static/CSS/style.css
+++ b/website/static/CSS/style.css
@@ -37,6 +37,19 @@ body {
 	transition: 0.5s ease;
 }
 
+#logout {
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	outline: none;
+	border: none;
+	font-size: 25px;
+	position: fixed;
+	left: 20px;
+	bottom: 20px;
+	transition: 0.5s ease;
+}
+
 #add-task:hover {
 	background-color: #5b0060;
 	color: white;
