--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,7 +2,7 @@
 {% block title %}Home{% endblock %}
 {% block head %}
 	<script>
-		if (!localStorage.getItem('username')) { window.location.href = '/auth/' }
+		if (!localStorage.getItem('email')) { window.location.href = '/auth/' }
 	</script>
 	<script defer src="/static/JS/home.js"></script>
 	<link rel="stylesheet" href="/static/CSS/style.css">
