--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -6,46 +6,47 @@
 	</script>
 {% endblock %}
 {% block body %}
-<form id="login">
-	<fieldset style="width: 30%;">
-		<label for="email">Email:</label>
-		<br>
-		<input type="email" id="email" name="email" placeholder="Email" required>
-		<br>
-		<label for="pwd">Password:</label>
-		<br>
-		<input type="password" id="pwd" name="password" placeholder="Password" required minlength="8">
-		<br>
-		<button id="loginBtn">Submit</button>
-	</fieldset>
-</form>
+	<form id="login">
+		<fieldset style="width: 25%;">
+			<label for="email">Email:</label>
+			<br>
+			<input type="email" id="email" placeholder="Email" required>
+			<br>
+			<label for="pwd">Password:</label>
+			<br>
+			<input type="password" id="pwd" placeholder="Password" required minlength="8">
+			<br>
+			<button id="loginBtn">Log In</button>
+		</fieldset>
+	</form>
 
-<script>
-	document.getElementById('loginBtn').onclick = async (event) => {
-		event.preventDefault();
-		const form = {
+	<script>
+		document.getElementById('loginBtn').onclick = async (event) => {
+			event.preventDefault();
+
+			const form = {
 				email: document.getElementById('email').value,
 				password: document.getElementById('pwd').value
 			};
-			
-		const validate = await fetch('/auth/', {
-			method: 'POST',
-			body: JSON.stringify(form),
-			headers: { 'Content-type': 'application/json' }
-		});
 
-		const response = await validate.json();
-		if (response.pwdValid) {
-			localStorage.setItem('email', form.email);
-			window.location.replace('/home');
-		} else if (response.userExists) {
-			document.getElementById('message').innerText = 'Invalid password. Please try again.';
-		} else {
-			document.getElementById('message').innerText = 'Invalid email. Please try again.';
-		}
-	};
-</script>
-<span id="message"></span>
-<br>
-<span>New User? </span><button onclick="window.location.href='./signup';">Register</button>
+			const validate = await fetch('/auth/', {
+				method: 'POST',
+				body: JSON.stringify(form),
+				headers: { 'Content-type': 'application/json' }
+			});
+
+			const response = await validate.json();
+			if (response.pwdValid) {
+				localStorage.setItem('email', form.email);
+				window.location.replace('/home');
+			} else if (response.userExists) {
+				document.getElementById('message').innerText = 'Invalid password. Please try again.';
+			} else {
+				document.getElementById('message').innerText = 'Invalid email. Please try again.';
+			}
+		};
+	</script>
+	<span id="message"></span>
+	<br>
+	<span>New User? </span><button onclick="window.location.href='./signup';">Register</button>
 {% endblock %}
