--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/static/CSS/style.css">
 {% endblock %}
 {% block body %}
-	<div id="to-do-list"></div>
-	<button id="logout" onclick="logOut()">-</button>
-	<button id="add-task" onclick="addTask()">+</button>
+	<div id="todo-list"></div>
+	<button class="btn logout" onclick="logOut()">x</button>
+	<button class="btn add-task" onclick="addTask()">+</button>
 {% endblock %}
