--- a/website/static/CSS/base.css
+++ b/website/static/CSS/base.css
@@ -4,6 +4,10 @@
 	box-sizing: border-box;
 }
 
+:root {
+	font-size: 14px;
+}
+
 body{
 	background: linear-gradient(103.04deg, #432371 17.29%, #714674 66.86%, #9F6976 100%);
 	height: 100vh;
@@ -80,7 +84,7 @@ input::placeholder {
 
 form > span {
 	float: right;
-	font-size: 11px;
+	font-size: 1rem;
 	margin-top: 3px;
 }
 
