--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,9 +6,214 @@
 	</script>
 	<script defer src="/static/JS/home.js"></script>
 	<link rel="stylesheet" href="/static/CSS/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 {% endblock %}
 {% block body %}
-	<div id="todo-list"></div>
+	<!-- <div id="todo-list"></div>
 	<button class="btn logout" onclick="logOut()">x</button>
-	<button class="btn add-task" onclick="addTask()">+</button>
+	<button class="btn add-task" onclick="addTask()">+</button> -->
+	<div class="main-container">
+		<nav class="navbar">
+			<div class="logo-container">
+				<div>ToDO</div>
+			</div>
+			<div class="nav-links">
+				<div class="nav-icon-container link-todo" title="ToDo">
+					<i class="nav-icon fa fa-tasks"></i>
+				</div>
+			</div>
+		</nav>
+		<div class="todo-main-container">
+			<div class="login-detail-container">
+				<div class="greet-user">
+					Hey there, Harsh Mishra
+				</div>
+				<div class="logout">
+					<button onclick="logOut()">Logout</button>
+					<div class="logout-hl"></div>
+				</div>
+			</div>
+			<div class="task-div-container">
+				<div class="container-todo">
+					<div class="heading">ToDo</div>
+					<hr>
+					<div class="add-task-btn-container">
+						<div class="add-task-btn">
+							<i class="fa fa-plus-circle"></i>
+						</div>
+					</div>
+					<div class="task-list">
+						<div class="task">
+							<div class="task-check">
+								<input type="checkbox" name="task">
+							</div>
+							<div class="task-desc">
+								Lorem ipsum dolor sit amet, consectetur adipiscing
+								elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis
+								nostrud exercitation ullamco laboris nisi ut aliquip ex
+								ea commodo consequat.
+							</div>
+						</div>
+						<div class="task">
+							<div class="task-check">
+								<input type="checkbox" name="task">
+							</div>
+							<div class="task-desc">
+								Lorem ipsum dolor sit amet, consectetur adipiscing
+								elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis
+								nostrud exercitation ullamco laboris nisi ut aliquip ex
+								ea commodo consequat.
+							</div>
+						</div>
+						<div class="task">
+							<div class="task-check">
+								<input type="checkbox" name="task">
+							</div>
+							<div class="task-desc">
+								Lorem ipsum dolor sit amet, consectetur adipiscing
+								elit, sed do eiusmod tempor incididunt ut labore et
+								dolore magna aliqua. Ut enim ad minim veniam, quis
+								nostrud exercitation ullamco laboris nisi ut aliquip ex
+								ea commodo consequat.
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container-pending">
+					<div class="heading">Pending</div>
+					<hr>
+					<div class="task-list">
+						<div class="pc-task-container">
+							<div class="date"><span class="date-line"></span>30-09-2021, Monday<span class="date-line"></span></div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task">
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task">
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task">
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+						</div>
+						<div class="pc-task-container">
+							<div class="date"><span class="date-line"></span>30-09-2021, Monday<span class="date-line"></span></div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task">
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task">
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task">
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container-completed">
+					<div class="heading">Completed</div>
+					<hr>
+					<div class="task-list">
+						<div class="pc-task-container">
+							<div class="date"><span class="date-line"></span>30-09-2021, Monday<span class="date-line"></span></div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task" checked>
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task" checked>
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+							<div class="task">
+								<div class="task-check">
+									<input type="checkbox" name="task" checked>
+								</div>
+								<div class="task-desc">
+									Lorem ipsum dolor sit amet, consectetur adipiscing
+									elit, sed do eiusmod tempor incididunt ut labore et
+									dolore magna aliqua. Ut enim ad minim veniam, quis
+									nostrud exercitation ullamco laboris nisi ut aliquip ex
+									ea commodo consequat.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
