--- a/website/static/CSS/style.css
+++ b/website/static/CSS/style.css
@@ -2,84 +2,207 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-:root {
-	--vis: none;
+.main-container {
+	display: flex;
+	height: 100vh;
+	width: 100%;
 }
 
-body {
-	background: linear-gradient(90deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
-	color: rgb(240, 240, 240);
-	height: 100%;
+nav {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	width: 80px;
+	max-width: 80px;
+	background-color: #F0EDF4;
+	text-align: center;
 }
 
-#todo-list {
+.logo-container {
+	padding: 10px 0;
+	font-size: 24px;
+	font-family: 'Poppins', sans-serif;
+}
+
+.nav-links {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	padding: 10px;	
+}
+
+.nav-icon-container {
+	background-color: #432271;
+	color: white;
 	padding: 10px;
+	text-align: center;
+	border: none;
+	border-radius: 8px;
+	font-family: 'Poppins', sans-serif;
+	box-shadow: 0px 6px 20px #a7a7a7;
 }
 
-.todo {
-	padding: 8px 12px 8px 50px;
-	color: rgb(240, 240, 240);
-	border-radius: 4px;
-	background-color: rgba(255, 255, 255, 0.281);
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-	margin: 10px 0px;
+.nav-icon-container:hover {
+	cursor: pointer;
+	box-shadow: 0px 6px 10px #818181;
+}
+
+.todo-main-container {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	width: 100%;
+}
+
+.login-detail-container {
+	width: 100%;
+	padding: 15px;
+	font-family: 'Poppins', sans-serif;
+	display: flex;
+	justify-content: space-between;
 	position: relative;
 }
 
-.todo:hover {
-	--vis: inline;
-}
-
-.check {
-	position: absolute;
-	top: 12px;
-	left: 20px;
-}
-
-.btn {
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	outline: none;
-	border: none;
-	font-size: 1.75rem;
-	position: fixed;
-	bottom: 20px;
-	transition: 0.5s ease;
-}
-
-.add-task {
-	right: 20px;
+.greet-user {
+	font-weight: bold;
 }
 
 .logout {
-	left: 20px;
+	position: relative;
 }
 
-.btn:hover {
-	background-color: #5b0060;
-	color: white;
+.logout a {
+	text-decoration: none;
+	color: #432271;
+	font-weight: bold;
 }
 
-.input-task, .input-task-class {
-	border: none;
-	outline: none;
-	background: transparent;
-	color: white;
-	display: block;
-	font-size: 1rem;
-}
-
-.input-task-class {
-	color: gray;
-}
-
-.btn-container {
+.logout-hl {
+	height: 4px;
+	width: 100%;
+	background-color: #432271;
 	position: absolute;
-	display: var(--vis);
-	right: 8px;
-	top: 12px;
+    bottom: -5px;
+	transition: height .25s ease-in;
+	z-index: -1;
+}
+
+.task-div-container {
+	height: 100%;
+	width: 100%;
+	justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	padding: 15px 20px;
+}
+
+.container-todo, .container-pending, .container-completed {
+	flex-basis: 32%;
+	height: 100%;
+	background-color: #F0EDF4;
+	border-radius: 12px;
+}
+
+.heading {
+	padding: 10px 14px;
+	font-size: 14px;
+	font-family: 'Poppins', sans-serif;
+	font-weight: bold;
+}
+
+hr {
+	border: none;
+    height: 2px;
+    background: #43227154;
+}
+
+.add-task-btn-container {
+	padding: 20px 40px;
+}
+
+.add-task-btn {
+	background-color: #432271;
+	color: white;
+	padding: 10px;
+	text-align: center;
+	border-radius: 8px;
+}
+
+.add-task-btn:hover {
+	cursor: pointer;
+	box-shadow: 0px 6px 10px #818181;
+}
+
+.task-list {
+	padding: 10px 20px;
+	overflow-y: scroll;
+	max-height: 550px;
+}
+
+.task {
+	background-color: white;
+	padding: 10px 14px;
+	margin-bottom: 20px;
+	border-radius: 8px;
+}
+
+.task-check {
+	display: flex;
+	width: 100%;
+	justify-content: flex-end;
+}
+
+.task-check input {
+	width: 20px;
+}
+
+.task-desc {
+	font-size: 12px;
+	font-family: 'Poppins', sans-serif;
+	word-wrap: break-word;
+	padding: 4px 10px;
+	text-align: justify;
+}
+
+::-webkit-scrollbar {
+    width: 2px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #432271;
+}
+
+.date {
+	font-size: 10px;
+	font-family: 'Poppins', sans-serif;
+	text-align: center;
+	padding: 10px 0px;
+	font-weight: bold;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.date-line {
+	width: 100px;
+	height: 4px;
+	background-color: #43227154;
+	display: inline-block;
+}
+
+@media only screen and (max-width: 768px) {
+
+	.task-div-container {
+		flex-direction: column;
+		overflow-y: scroll;
+	}
+
+	.task-div-container > div:not(:first-child){
+		margin-top: 20px;
+	}
+
 }
